# tools

./: .cog-files  .coveragerc  .env  .envrc  .gitignore  .gitmodules  .graphqlrc.yml  .prospector.yaml  BUILD  Dockerfile  LICENSE  Pipfile  README.md  conftest.py  dev.requirements.txt  justfile  monkeytype_config.py  pants.toml  pyproject.toml  run  uv.lock.txt
projects/aruba/: .copier-answers.yml  README.md  pyproject.toml
projects/aruba/uoft_aruba/: __init__.py  api.py  batch.py  cli.py  cpsec_whitelist.py  stm_blacklist.py
projects/aruba/uoft_aruba/cli_commands/: cpsec_allowlist.py  cpsec_whitelist.py  list_aps.py  station_blacklist.py  station_blocklist.py
projects/aruba/uoft_aruba/tests/: end_to_end.py  end_to_end_tests.py
projects/bluecat/: .copier-answers.yml  README.md  pyproject.py  pyproject.toml
projects/bluecat/uoft_bluecat/: __init__.py  api.py  cli.py
projects/bluecat/uoft_bluecat/tests/: integration_tests.py
projects/core/: README.md  hatch_build.py  pyproject.py  pyproject.toml
projects/core/src/utsc/core/: __init__.py  nested_data.py  other.py
projects/core/uoft_core/: __init__.py  __main__.py  api.py  aruba.py  console.py  jinja_library.py  logging.py  other.py  prompt.py  types.py  typing.py
projects/core/uoft_core/_vendor/: __init__.py
projects/core/uoft_core/_vendor/bluecat_libraries/: LICENSE
projects/core/uoft_core/_vendor/boltons/: dictutils.py  fileutils.py  funcutils.py  namedutils.py  statsutils.py
projects/core/uoft_core/_vendor/dict_typer/: __init__.py  models.py
projects/core/uoft_core/_vendor/netaddr/: LICENSE  __init__.py  core.py  fbsocket.py
projects/core/uoft_core/_vendor/platformdirs/: android.py
projects/core/uoft_core/_vendor/tomlkit/: _compat.py  items.py  toml_char.py
projects/core/uoft_core/tests/: __init__.py  _plugin.py  integration_tests.py  regression_tests.py  test_config.py  test_prompt.py  test_utils.py  unit_tests.py
projects/core/uoft_core/tests/v1/: _conftest.py
projects/core/uoft_core/tests/yaml/: _test_z_data.py  (+11 more)
projects/core/uoft_core/toml/: __init__.py  _parser.py  _re.py
projects/core/uoft_core/yaml/: __init__.py  anchor.py  comments.py  compat.py  composer.py  configobjwalker.py  constructor.py  cyaml.py  dumper.py  emitter.py  error.py  events.py  io.py  loader.py  main.py  nodes.py  parser.py  reader.py  representer.py  resolver.py  scalarbool.py  scalarfloat.py  scalarint.py  scalarstring.py  scanner.py  serializer.py  tokens.py  util.py
projects/core/utsc/: core
projects/core/utsc/core/: __init__.py  other.py
projects/grist/: .copier-answers.yml  README.md  pyproject.py  pyproject.toml
projects/grist/uoft_grist/: __init__.py  cli.py
projects/librenms/: .copier-answers.yml  README.md  pyproject.toml
projects/librenms/uoft_librenms/: __init__.py  api.py  cli.py
projects/librenms/uoft_librenms/tests/: end_to_end.py  end_to_end_tests.py  unit_tests.py
projects/nautobot/: .copier-answers.yml  .envrc  .uoft_core.debug.cache.get_data  .uoft_core.debug.cache.golden_config_data  Dockerfile  README.md  dev.env  docker-compose.yml  flake.nix  nautobot_config.py  pyproject.py  pyproject.toml  shell.nix  utsc_nautobot  v2_migration.md
projects/nautobot/src/nautobot_utsc/: __init__.py  jobs.py
projects/nautobot/uoft_nautobot/: __init__.py  auth.py  datasources.py  dispatcher.py  excel.py  golden_config.py  jinja_filters.py  jobs.py  librenms.py  secrets.py  template_content.py
projects/nautobot/uoft_nautobot/api/: urls.py  views.py
projects/nautobot/uoft_nautobot/diffsync/: __init__.py
projects/nautobot/uoft_nautobot/jobs/: __init__.py
projects/nautobot/uoft_nautobot/tests/: end_to_end.py  end_to_end_tests.py  integration.py  integration_tests.py
projects/occupancy/: .copier-answers.yml  pyproject.toml
projects/occupancy/uoft_occupancy/: __init__.py  cli.py
projects/paloalto/: .copier-answers.yml  README.md  pyproject.py  pyproject.toml
projects/paloalto/uoft_paloalto/: __init__.py  api.py  cli.py
projects/paloalto/uoft_paloalto/tests/: integration_tests.py
projects/phpipam/: .copier-answers.yml  README.md  pyproject.toml
projects/phpipam/uoft_phpipam/: __init__.py  ansible_lookup.py  api.py  cli.py  serial_lookup.py
projects/scripts/: README.md  pyproject.toml
projects/scripts/uoft_scripts/: __init__.py  __main__.py  _jinja.py  _sync.py  arista.py  arista_cli.py  aruba.py  bluecat.py  cli.py  ldap.py  librenms.py  nautobot.py  nornir.py  sib_turnup.py  stg_ipam_dev.py
projects/scripts/uoft_scripts/arista/: __init__.py  cli.py  enrollment.proto  enrollment_pb2.py  lib.py  onboarding.py
projects/scripts/uoft_scripts/ldap/: cli.py
projects/scripts/uoft_scripts/nautobot/: __init__.py  cli.py  lib.py  port_activation.py
projects/scripts/uoft_scripts/sib_turnup/: cli.py
projects/scripts/uoft_scripts/stg_ipam_dev/: lib.py
projects/scripts/uoft_scripts/tests/: conftest.py  integration.py  integration_tests.py  test_nautobot.py  test_sync.py
projects/scripts/utsc/: scripts
projects/snipeit/: .copier-answers.yml  README.md  pyproject.py  pyproject.toml
projects/snipeit/uoft_snipeit/: AP-Template.odt  __init__.py  api.py  batch.py  checkout.py  cli.py  config.py  create.py  create_checkout.py  generate.py  location_lookup.py  mkinventorylabel.py  print.py  serial_lookup.py
projects/ssh/: .copier-answers.yml  README.md  pyproject.toml
projects/ssh/uoft_ssh/: __init__.py  cli.py  pexpect_utils.py  util.py
projects/ssh/uoft_ssh/tests/: unit_tests.py
projects/switchconfig/: .copier-answers.yml  README.md  pyproject.py  pyproject.toml
projects/switchconfig/uoft_switchconfig/: __init__.py  __main__.py  cli.py  deploy.py  generate.py  types.py  util.py
projects/switchconfig/uoft_switchconfig/example_template_dir/: __init__.py  comment-block-schema-example.j2
projects/switchconfig/uoft_switchconfig/tests/: __init__.py  conftest.py  end_to_end_tests.py  integration.py  integration_tests.py  test_cli.py  test_generate.py  unit_tests.py
projects/switchconfig/utsc/: switchconfig
projects/switchconfig/utsc/switchconfig/: generate.py
(+543 files in other folders)
