[project]
name = "uoft"
version = "0.1.0"
readme = "README.md"
requires-python = ">= 3.10"
authors = [
  { name = "Alex Tremblay", email = "alex.tremblay@utoronto.ca" }, 
  { name = "University of Toronto", email = "alex.tremblay@utoronto.ca" }
]
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = ['conftest.py'] # This is a meta-package, it doesn't need to package ANY files, but hatch requires a file selection -_-

[tool.rye]
managed = true
dev-dependencies = [
    "black>=22.3.0",
    "build",
    "cogapp>=3.3",
    "copier>=7",
    "invoke>=1.7",
    "ptpython[ptipython]>=3.0",
    "pylint",
    "pytest>=7.0",
    "pytest-cov",
    "pytest-mock>=3.6",
    "pytest-recording",
    "ruff>=0.5.0",
    "setuptools_scm>=7",
    "tomlkit>=0.11",
    "typer >= 0.9",
    "copier-templates-extensions>=0.3.0",
    "hatchling>=1.18.0",
    "scalene>=1.5.38",
    "mypy>=1.6",
    "coconut>=3.0.3",
    "shellingham>=1.5.4",
    "pexpect @ git+https://github.com/pexpect/pexpect",
    "lazyasd>=0.1.4",
    "lazy-imports>=0.3.1",
    "pip>=23.3.1",
    "pipdeptree>=2.13.1",
]

[tool.rye.workspace]
members = ["projects/*", "custom-forks/*"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests", "projects/**/tests"]
norecursedirs = [
    "**/fixtures",
    "dist",
    "build",
    "docs",
    "hazmat",
    ".venv",
    ".tox",
    ".nox",
    ".git",
    ".hg",
    ".mypy_cache",
    ".ruff_cache",
    ".pants.d",
]
# more flexible test-naming schemes
python_files = ["test_*.py", "*_test.py", "*_tests.py"]
python_classes = ["Test*", "*Test", "*Tests"]
python_functions = ["test_*", "*_test", "*_tests"]


[tool.pylsp-mypy]
enabled = true
dmypy = true
overrides = [
    "--python-executable",
    ".venv/bin/python",
    # putting a true here tells pylsp-mypy to include all the 
    # default command line args, instead of replacing them
    true
]


[tool.ruff]
line-length = 120

typing-modules = ["uoft_core.types"]

# Enable Flake's "E", "W", and "F" codes by default.
select = ["E", "W", "F", "RUF"]
ignore = ["E401", "W291"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"
