[project]
name = "uoft"
version = "0.1.0"
readme = "README.md"
requires-python = ">= 3.10"
authors = [
    { name = "Alex Tremblay", email = "alex.tremblay@utoronto.ca" },
    { name = "University of Toronto", email = "alex.tremblay@utoronto.ca" },
]
license = { text = "MIT" }
dependencies = [
# [[[cog
# import _cog as c; c.all_projects_as_dependencies()
# ]]]
"uoft-grist",
"uoft-snipeit",
"uoft-phpipam",
"uoft-librenms",
"uoft-aruba",
"uoft-nautobot",
"uoft-paloalto",
"uoft-bluecat",
"uoft-ssh",
"uoft-scripts",
"uoft-switchconfig",
"uoft-core",
"nautobot",
# [[[end]]]
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = [
    'conftest.py',
] # This is a meta-package, it doesn't need to package ANY files, but hatch requires a file selection -_-

[tool.uv]
managed = true
dev-dependencies = [
    "black >= 22.3.0",
    "cogapp >= 3.3",
    "copier >= 7",
    "copier-templates-extensions >= 0.3.0",
    "ptpython[ptipython] >= 3.0.29",
    "pytest >= 7.0",
    "pytest-cov >= 5.0",
    "pytest-mock >= 3.6",
    "pytest-recording >= 0.13",
    "ruff >= 0.5.0",
    "setuptools_scm >= 7",
    "tomlkit >= 0.11",
    "typer >= 0.12",
    "scalene >= 1.5.38",
    "mypy >= 1.6",
    "coconut >= 3.0.3",
    "shellingham >= 1.5.4",
    "pexpect @ git+https://github.com/pexpect/pexpect@eb2820cec514c3ed5482e80ad3438cd31f2fa1ef",
    "lazyasd >= 0.1.4",
    "pip >= 23.3.1",
    "mcpyrate >= 3.6.0",
    "tuna >= 0.5",
    "debugpy >= 1.5.0",
]

[tool.uv.workspace]
members = ["projects/*", "custom-forks/*"]
exclude = ["custom-forks/_patches"]

[tool.uv.sources]
# [[[cog
# import _cog as c; c.all_projects_as_uv_sources()
# ]]]
uoft-grist = { workspace = true }
uoft-snipeit = { workspace = true }
uoft-phpipam = { workspace = true }
uoft-librenms = { workspace = true }
uoft-aruba = { workspace = true }
uoft-nautobot = { workspace = true }
uoft-paloalto = { workspace = true }
uoft-bluecat = { workspace = true }
uoft-ssh = { workspace = true }
uoft-scripts = { workspace = true }
uoft-switchconfig = { workspace = true }
uoft-core = { workspace = true }
nautobot = { workspace = true }
# [[[end]]]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests", "projects/**/tests"]
norecursedirs = [
    "**/fixtures",
    "dist",
    "build",
    "docs",
    "hazmat",
    ".venv",
    ".tox",
    ".nox",
    ".git",
    ".hg",
    ".mypy_cache",
    ".ruff_cache",
    ".pants.d",
]
# more flexible test-naming schemes
python_files = ["test_*.py", "*_test.py", "*_tests.py"]
python_classes = ["Test*", "*Test", "*Tests"]
python_functions = ["test_*", "*_test", "*_tests"]


[tool.pylsp-mypy]
enabled = true
dmypy = true
overrides = [
    "--python-executable",
    ".venv/bin/python",
    # putting a true here tells pylsp-mypy to include all the 
    # default command line args, instead of replacing them
    true,
]


[tool.ruff]
line-length = 120

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]


# Assume Python 3.10.
target-version = "py310"

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

typing-modules = ["uoft_core.types"]

# Enable Flake's "E", "W", and "F" codes by default.
select = ["E", "W", "F", "RUF"]
ignore = ["E401", "W291"]
