[project]
name = "uoft_aruba"
version = "0.0" # This field will be auto-populated by pyproject.py
description = "Collection of utilities for interacting with Aruba infrastructure"
authors = [
    { name = "Kyle Fozo", email = "kyle.fozo@utoronto.ca" },
    { name = "University of Toronto", email = "alex.tremblay@utoronto.ca" },
]
requires-python = ">=3.10"
readme = "README.md"
dependencies = ["pydantic[dotenv]", "uoft_core", "typer"]

license = { text = "MIT" }

[project.urls]
Repository = "https://github.com/uoft-networking/tools"

[project.scripts]
uoft-aruba = "uoft_aruba.cli:app"
uoft_aruba = "uoft_aruba.cli:deprecated"
Aruba_Provision_CPSEC_Whitelist = "uoft_aruba.cli:deprecated"

[build-system]
requires = ["hatchling >= 1.6.0", "setuptools_scm"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.custom]
path = "pyproject.py"

[tool.hatch.build]
only-packages = true
