[project]
name = "uoft_aruba"
description = "Collection of utilities for interacting with Aruba infrastructure"
authors = [
    { name = "Kyle Fozo", email = "kyle.fozo@utoronto.ca" },
    { name = "University of Toronto", email = "alex.tremblay@utoronto.ca" },
]
requires-python = ">=3.10"
readme = "README.md"
dependencies = ["pydantic[dotenv]", "uoft_core", "typer"]
dynamic = ["version"]

license = { text = "MIT" }

[project.urls]
Repository = "https://github.com/uoft-networking/tools/tree/main/projects/aruba"

[project.scripts]
uoft-aruba = "uoft_aruba.cli:app"

[build-system]
requires = ["hatchling >= 1.6.0", "setuptools_scm"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.metadata.hooks.custom]
path = "pyproject.py"

[tool.hatch.build]
packages = ["uoft_aruba"]
exclude = ["**/tests"]
