[project]
name = "uoft_aruba"
description = "Collection of utilities for interacting with Aruba infrastructure"
authors = [
    { name = "Kyle Fozo", email = "kyle.fozo@utoronto.ca" },
    { name = "University of Toronto", email = "alex.tremblay@utoronto.ca" },
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dynamic = ["version"]
dependencies = ["uoft_core", "typer"]

[project.urls]
Repository = "https://github.com/uoft-networking/tools/tree/main/projects/aruba"

[project.scripts]
uoft-aruba = "uoft_aruba.cli:cli"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "scm"

[tool.pdm.build]
custom-hook = "pyproject.py"
includes = ["uoft_aruba"]
excludes = ["**/tests", "**/__pycache__"]
