[project]
name = "uoft_bluecat"
description = "CLI and API to manage a Bluecat instance"
authors = [
    { name = "Alex Tremblay", email = "alex.tremblay@utoronto.ca" },
    { name = "University of Toronto", email = "alex.tremblay@utoronto.ca" },
]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "uoft_core"
]
dynamic = ["version"]

license = { text = "MIT" }

[project.urls]
Repository = "https://github.com/uoft-networking/tools/tree/main/projects/bluecat"

[project.scripts]
uoft-bluecat = "uoft_bluecat.cli:app"

[build-system]
requires = ["hatchling >= 1.6.0", "setuptools_scm"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.metadata.hooks.custom]
path = "pyproject.py"

[tool.hatch.build]
packages = ["uoft_bluecat"]
exclude = ["**/tests"]
