[project]
name = "uoft_bluecat"
description = "CLI and API to manage a Bluecat instance"
authors = [
    { name = "Alex Tremblay", email = "alex.tremblay@utoronto.ca" },
    { name = "University of Toronto", email = "alex.tremblay@utoronto.ca" },
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dynamic = ["version"]
dependencies = ["uoft_core"]

[project.urls]
Repository = "https://github.com/uoft-networking/tools/tree/main/projects/bluecat"

[project.scripts]
uoft-bluecat = "uoft_bluecat.cli:cli"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "scm"

[tool.pdm.build]
custom-hook = "pyproject.py"
includes = ["uoft_bluecat"]
excludes = ["**/tests", "**/__pycache__"]
