[project]
name = "uoft_core"
description = "an opinionated set of utilities designed to be easily included in any number of projects"
readme = "README.md"
authors = [
  { name = "Alex Tremblay", email = "alex.tremblay@utoronto.ca" }, 
  { name = "University of Toronto", email = "alex.tremblay@utoronto.ca" }
]
license = "MIT"
requires-python = ">=3.10"

dependencies = [
  "loguru >= 0.6",
  "typer>=0.4",
  "rich >= 12.2",
  "requests >= 2.20",
  "pydantic[dotenv] >= 1.9, < 2.0",
  "prompt_toolkit >= 3.0",
]
dynamic = ["version"]

[project.optional-dependencies]
all = [
  "jinja2 >= 3.0",
  "sentry-sdk >= 1.4",
  "semver",
  "pytest >= 6.0",
]

[project.scripts]
uoft = "uoft_core.__main__:cli"

[build-system]
requires = ["hatchling >= 1.6.0", "setuptools_scm"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.metadata.hooks.custom]
path = "pyproject.py"

[tool.hatch.build]
only-packages = true
packages = ["uoft_core"]
exclude = ["**/tests"]
