[project]
name = "uoft_core"
description = "an opinionated set of utilities designed to be easily included in any number of projects"
readme = "README.md"
authors = [
  { name = "Alex Tremblay", email = "alex.tremblay@utoronto.ca" },
  { name = "University of Toronto", email = "alex.tremblay@utoronto.ca" },
]
requires-python = ">=3.10"
license = { text = "MIT" }
dynamic = ["version"]
dependencies = [
  "typer>=0.12",
  "rich >= 12.2",
  "requests >= 2.20",
  "pydantic >= 2.0",
  "python-dotenv >= 1.0", # for pydantic basesettings
  "prompt_toolkit >= 3.0",
  "typing-extensions >= 4.9",
  "yarl >= 1.9",
]

[project.optional-dependencies]
all = ["jinja2 >= 3.0", "sentry-sdk >= 1.4", "semver >= 3.0", "pytest >= 6.0"]

[project.scripts]
uoft = "uoft_core.__main__:cli"

[build-system]
requires = ["pdm-backend", "debugpy"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "scm"

[tool.pdm.build]
custom-hook = "pyproject.py"
includes = ["uoft_core"]
excludes = ["**/tests", "**/__pycache__"]
