[project]
name = "uoft_grist"
version = "0.0" # This field will be auto-populated by pyproject.py
description = "UofT Grist - Utilization Reporting"
authors = [
    { name = "Kyle-Fozo", email = "kyle.fozo@utoronto.ca" },
    { name = "University of Toronto", email = "alex.tremblay@utoronto.ca" },
]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "uoft_core",
    "uoft_aruba",
    "grist_api",
]

license = { text = "MIT" }

[project.urls]
Repository = "https://github.com/uoft-networking/tools/tree/main/projects/grist"

[project.scripts]
uoft-grist = "uoft_grist.cli:cli"

[build-system]
requires = ["hatchling >= 1.6.0", "setuptools_scm"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.custom]
path = "pyproject.py"

[tool.hatch.build]
packages = ["uoft_grist"]
exclude = ["**/tests"]
