[project]
name = "uoft_grist"
description = "UofT Grist - Utilization Reporting"
authors = [
    { name = "Kyle-Fozo", email = "kyle.fozo@utoronto.ca" },
    { name = "University of Toronto", email = "alex.tremblay@utoronto.ca" },
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dynamic = ["version"]
dependencies = ["uoft_core", "uoft_aruba", "grist_api"]

[project.urls]
Repository = "https://github.com/uoft-networking/tools/tree/main/projects/grist"

[project.scripts]
uoft-grist = "uoft_grist.cli:cli"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "scm"

[tool.pdm.build]
custom-hook = "pyproject.py"
includes = ["uoft_grist"]
excludes = ["**/tests", "**/__pycache__"]
