[project]
name = "uoft_librenms"
version = "0.0" # This field will be auto-populated by pyproject.py
description = "API Wrapper and (hopefully soon) CLI interface for the LibreNMS REST API"
authors = [
    { name = "Alex Tremblay", email = "alex.tremblay@utoronto.ca" },
    { name = "University of Toronto", email = "alex.tremblay@utoronto.ca" },
]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "uoft_core"
]

license = { text = "MIT" }

[project.urls]
Repository = "https://github.com/uoft-networking/tools/tree/main/projects/librenms"

[project.scripts]
uoft-librenms = "uoft_librenms.cli:app"

[build-system]
requires = ["hatchling >= 1.6.0", "setuptools_scm"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.custom]
path = "pyproject.py"

[tool.hatch.build]
packages = ["uoft_librenms"]
exclude = ["**/tests"]
