[project]
name = "uoft_librenms"
description = "API Wrapper and (hopefully soon) CLI interface for the LibreNMS REST API"
authors = [
    { name = "Alex Tremblay", email = "alex.tremblay@utoronto.ca" },
    { name = "University of Toronto", email = "alex.tremblay@utoronto.ca" },
]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "uoft_core"
]
dynamic = ["version"]

license = { text = "MIT" }

[project.urls]
Repository = "https://github.com/uoft-networking/tools/tree/main/projects/librenms"

[project.scripts]
uoft-librenms = "uoft_librenms.cli:cli"

[build-system]
requires = ["hatchling >= 1.6.0", "setuptools_scm"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.metadata.hooks.custom]
path = "pyproject.py"

[tool.hatch.build]
packages = ["uoft_librenms"]
exclude = ["**/tests"]
