[project]
name = "uoft_librenms"
description = "API Wrapper and (hopefully soon) CLI interface for the LibreNMS REST API"
authors = [
    { name = "Alex Tremblay", email = "alex.tremblay@utoronto.ca" },
    { name = "University of Toronto", email = "alex.tremblay@utoronto.ca" },
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dynamic = ["version"]
dependencies = ["uoft_core"]

[project.urls]
Repository = "https://github.com/uoft-networking/tools/tree/main/projects/librenms"

[project.scripts]
uoft-librenms = "uoft_librenms.cli:cli"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "scm"

[tool.pdm.build]
custom-hook = "pyproject.py"
includes = ["uoft_librenms"]
excludes = ["**/tests", "**/__pycache__"]
