[project]
name = "uoft_nautobot"
version = "0.0" # This field will be auto-populated by pyproject.py
description = "A collection of UofT-specific modifications and extensions to Nautobot"
authors = [
    { name = "Alex Tremblay", email = "alex.tremblay@utoronto.ca" },
    { name = "University of Toronto", email = "alex.tremblay@utoronto.ca" },
]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "uoft_core",
  "uoft_aruba",
  "uoft_ssh",
  "nautobot == 1.6.1",
  "nautobot_ssot >= 1.3",
  "nautobot_golden_config",
  "nautobot-device-onboarding",
  "django-auth-ldap",
  "debugpy",
  "django-debug-toolbar",
  "html-table-parser-python3 >=0.2.0",
  "django-environ",
  "napalm",
  "napalm-aruba-cx",
  "librenms_handler",
  "python-box",
]

license = { text = "MIT" }

[project.urls]
Repository = "https://github.com/uoft-networking/tools/tree/main/projects/nautobot"


[build-system]
requires = ["hatchling >= 1.6.0", "setuptools_scm"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.custom]
path = "pyproject.py"

[tool.hatch.build]
packages = ["uoft_nautobot"]
exclude = ["**/tests"]
