[project]
name = "uoft_nautobot"
description = "A collection of UofT-specific modifications and extensions to Nautobot"
authors = [
    { name = "Alex Tremblay", email = "alex.tremblay@utoronto.ca" },
    { name = "University of Toronto", email = "alex.tremblay@utoronto.ca" },
]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "uoft_core",
  "uoft_aruba",
  "uoft_ssh",
  "uoft_bluecat",
  "nautobot >= 2.2.0",
  "python-jose >= 3.0.0",
  "nautobot_ssot >= 2.3",
  "nautobot_golden_config >= 2.0",
  "nautobot-device-onboarding >= 3.0",
  "debugpy",
  "django-debug-toolbar",
  "html-table-parser-python3 >=0.2.0",
  "django-environ",
  "napalm",
  "napalm-aruba-cx",
  "librenms_handler",
  "python-box",
  "glom",
  "openpyxl",
  "pynautobot",
  "deepdiff",
]
dynamic = ["version"]

license = { text = "MIT" }

[project.urls]
Repository = "https://github.com/uoft-networking/tools/tree/main/projects/nautobot"

[project.scripts]
nautobot-server = "nautobot.core.cli:main" # re-export nautobot's CLI

[build-system]
requires = ["hatchling >= 1.6.0", "setuptools_scm"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.metadata.hooks.custom]
path = "pyproject.py"

[tool.hatch.build]
packages = ["uoft_nautobot"]
exclude = ["**/tests"]
