[project]
name = "uoft_nautobot"
description = "A collection of UofT-specific modifications and extensions to Nautobot"
authors = [
  { name = "Alex Tremblay", email = "alex.tremblay@utoronto.ca" },
  { name = "University of Toronto", email = "alex.tremblay@utoronto.ca" },
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dynamic = ["version"]
dependencies = [
  "uoft_core",
  "uoft_aruba",
  "uoft_ssh",
  "uoft_bluecat",
  "nautobot",
  "python-jose >= 3.0.0",
  "nautobot_ssot >= 2.7",
  "nautobot_golden_config >= 2.3",
  "nautobot-device-onboarding >= 3.0",
  "debugpy >= 1.8",
  "django-debug-toolbar >= 4.4",
  "ptpython >= 3.0.29",                # for nbshell
  "html-table-parser-python3 >=0.2.0",
  "django-environ >= 0.11",
  "napalm >= 4.1",
  "napalm-aruba-cx >= 0.1",
  "python-box >= 7.2",
  "glom >= 23.5",
  "openpyxl >= 3.1",
  "pynautobot >= 2.2",
  "deepdiff >= 7.0",
  "pytz >= 2024",
  "passlib >= 1.7",
]

[project.urls]
Repository = "https://github.com/uoft-networking/tools/tree/main/projects/nautobot"

[project.scripts]
nautobot-server = "nautobot.core.cli:main" # re-export nautobot's CLI

[build-system]
requires = ["pdm-backend", "debugpy"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "scm"

[tool.pdm.build]
custom-hook = "pyproject.py"
includes = ["uoft_nautobot"]
excludes = ["**/tests", "**/__pycache__"]
