[project]
name = "uoft_paloalto"
description = "CLI and API to work with Paloalto products (NSM, etc)"
authors = [
    { name = "Alex Tremblay", email = "alex.tremblay@utoronto.ca" },
    { name = "University of Toronto", email = "alex.tremblay@utoronto.ca" },
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dynamic = ["version"]
dependencies = ["uoft_core"]

[project.urls]
Repository = "https://github.com/uoft-networking/tools/tree/main/projects/paloalto"

[project.scripts]
uoft-paloalto = "uoft_paloalto.cli:cli"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "scm"

[tool.pdm.build]
custom-hook = "pyproject.py"
includes = ["uoft_paloalto"]
excludes = ["**/tests", "**/__pycache__"]
