[project]
name = "uoft_phpipam"
description = "A collection of tool to interact with a phpIPAM instance."
authors = [
    { name = "Kyle Fozo", email = "kyle.fozo@utoronto.ca" },
    { name = "University of Toronto", email = "alex.tremblay@utoronto.ca" },
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dynamic = ["version"]
dependencies = ["uoft_core"]

[project.urls]
Repository = "https://github.com/uoft-networking/tools/tree/main/projects/phpipam"

[project.scripts]
uoft-phpipam = "uoft_phpipam.cli:cli"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "scm"

[tool.pdm.build]
custom-hook = "pyproject.py"
includes = ["uoft_phpipam"]
excludes = ["**/tests", "**/__pycache__"]
