[project]
name = "uoft_scripts"
description = "a collection of scripts and one-off tools"
authors = [
  { name = "Alex Tremblay", email = "alex.tremblay@utoronto.ca" },
  { name = "University of Toronto", email = "alex.tremblay@utoronto.ca" },
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dynamic = ["version"]
dependencies = [
  "uoft_core",
  "uoft_bluecat",
  "uoft_ssh",
  "uoft_librenms",
  "pynautobot >= 2.1.1",
  "jinja2",
  "deepdiff",
  "python-box",
  "glom",
  "pydantic >= 1.9.0",
  "prompt-toolkit >= 3.0.19",
  "rich >= 10.7.0",
  "pyquery >= 1.4.0",
  "ldap3",
  "nornir_napalm",
  "nornir_netmiko",
  "nornir_nautobot",
]

[project.scripts]
uoft-scripts = "uoft_scripts.cli:cli"

[build-system]
requires = ["pdm-backend", "debugpy"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "scm"

[tool.pdm.build]
custom-hook = "pyproject.py"
includes = ["uoft_scripts"]
excludes = ["**/tests", "**/__pycache__"]
