[project]
name = "uoft_snipeit"
description = "Collection of tools to interact with SnipeIT."
authors = [
    { name = "Kyle Fozo", email = "kyle.fozo@utoronto.ca" },
    { name = "University of Toronto", email = "alex.tremblay@utoronto.ca" },
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dynamic = ["version"]
dependencies = ["uoft_core", "pystache", "qrcode", "pillow"]

[project.urls]
Repository = "https://github.com/uoft-networking/tools/tree/main/projects/snipeit"

[project.scripts]
uoft-snipeit = "uoft_snipeit.cli:cli"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "scm"

[tool.pdm.build]
custom-hook = "pyproject.py"
includes = ["uoft_snipeit"]
excludes = ["**/tests", "**/__pycache__"]
