[project]
name = "uoft_ssh"
version = "0.0" # This field will be auto-populated by pyproject.py
description = "A toolkit for working with SSH. Wrappers, Ansible convenience features, Nornir integration, etc"
authors = [
    { name = "Alex Tremblay", email = "alex.tremblay@utoronto.ca" },
    { name = "University of Toronto", email = "alex.tremblay@utoronto.ca" },
]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "uoft_core",
    "nornir_napalm"
]

license = { text = "MIT" }

[project.urls]
Repository = "https://github.com/uoft-networking/tools/tree/main/projects/ssh"

[project.scripts]
uoft-ssh = "uoft_ssh.cli:app"

[build-system]
requires = ["hatchling >= 1.6.0", "setuptools_scm"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.custom]
path = "pyproject.py"

[tool.hatch.build]
packages = ["uoft_ssh"]
exclude = ["**/tests"]
