[project]
name = "uoft_ssh"
description = "A toolkit for working with SSH. Wrappers, Ansible convenience features, Nornir integration, etc"
authors = [
    { name = "Alex Tremblay", email = "alex.tremblay@utoronto.ca" },
    { name = "University of Toronto", email = "alex.tremblay@utoronto.ca" },
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dynamic = ["version"]
dependencies = [
    "uoft_core",
    "nornir_napalm",

    # the pexpect project is still active but no longer seems to be making pypi releases
    # install from git instead
    "pexpect @ git+https://github.com/pexpect/pexpect@eb2820cec514c3ed5482e80ad3438cd31f2fa1ef",
]

[project.urls]
Repository = "https://github.com/uoft-networking/tools/tree/main/projects/ssh"

[project.scripts]
uoft-ssh = "uoft_ssh.cli:cli"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "scm"

[tool.pdm.build]
custom-hook = "pyproject.py"
includes = ["uoft_ssh"]
excludes = ["**/tests", "**/__pycache__"]
