[project]
name = "uoft_switchconfig"
version = "0.0" # This field will be auto-populated by pyproject.py
description = "A tool to easily provision switches on the bench"
readme = "README.md"
authors = [
  { name = "Alex Tremblay", email = "alex.tremblay@utoronto.ca" },
  { name = "University of Toronto", email = "alex.tremblay@utoronto.ca" },
]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  "uoft_core",
  "Jinja2 >= 3.0.1",
  "pydantic >= 1.9.0",
  "arrow >= 1.1.1",
  "prompt-toolkit >= 3.0.19",
  "paramiko >= 2.7.2",
  "pexpect >= 4.8.0",
  "rich >= 10.7.0",
  "ipdb >= 0.13.9",
  "netaddr >= 0.8.0",
]

[project.scripts]
"uoft_switchconfig" = "uoft_switchconfig.__main__:cli"

[build-system]
requires = ["hatchling >= 1.6.0", "setuptools_scm"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.custom]
path = "pyproject.py"

[tool.hatch.build]
only-packages = true
